cmake_minimum_required(VERSION 3.30)
project(finalExam)

set(CMAKE_CXX_STANDARD 20)

add_executable(finalExam
#        Ch11_tree/24p/main.cpp
        #        main.cpp
#        circularQueue.cpp
#        circularQueue2.cpp
#        circularQueue3.cpp
#        Ch9_queue/circularQueue4.cpp

#        Ch10_table/25p/Table.h
#        Ch10_table/25p/main.cpp
#        Ch10_table/25p/CPhone.h

#        Ch10_table/51p/CPhone.h
#        Ch10_table/51p/LinkedListHash.cpp
#        Ch10_table/51p/LinkedListHash.h
#        Ch10_table/51p/main.cpp
#        Ch11_tree/24p/BinaryTree.h
#        Ch11_tree/24p/main.cpp
        Ch11_tree/40p/BinaryTree.h
        Ch11_tree/40p/BST.h
        Ch11_tree/40p/BinarySearchTree.cpp
        #        Ch10_table/51p/Table.h

)
